@@ -1,6 +1,6 @@
 // **********************************************************************
 //
-// Copyright (c) 2003-2009 ZeroC, Inc. All rights reserved.
+// Copyright (c) 2003-2010 ZeroC, Inc. All rights reserved.
 //
 // This copy of Ice is licensed to you under the terms described in the
 // ICE_LICENSE file included in this distribution.
@@ -27,7 +27,7 @@ public class BasicStream
     initialize(Instance instance, boolean unlimited)
     {
         _instance = instance;
-        _buf = new Buffer(_instance.messageSizeMax());
+        _buf = new Buffer(_instance.messageSizeMax(), _instance.cacheMessageBuffers() > 1);
         _closure = null;
         _unlimited = unlimited;
 
@@ -42,7 +42,7 @@ public class BasicStream
 
         _messageSizeMax = _instance.messageSizeMax(); // Cached for efficiency.
 
-        _seqDataStack = null;
+        _startSeq = -1;
         _objectList = null;
     }
 
@@ -54,15 +54,31 @@ public class BasicStream
     reset()
     {
         _buf.reset();
+        clear();
+    }
 
+    public void
+    clear()
+    {
         if(_readEncapsStack != null)
         {
             assert(_readEncapsStack.next == null);
             _readEncapsStack.next = _readEncapsCache;
             _readEncapsCache = _readEncapsStack;
-            _readEncapsStack = null;
             _readEncapsCache.reset();
+            _readEncapsStack = null;
         }
+
+        if(_writeEncapsStack != null)
+        {
+            assert(_writeEncapsStack.next == null);
+            _writeEncapsStack.next = _writeEncapsCache;
+            _writeEncapsCache = _writeEncapsStack;
+            _writeEncapsCache.reset();
+            _writeEncapsStack = null;
+        }
+
+        _startSeq = -1;
 
         if(_objectList != null)
         {
@@ -129,9 +145,13 @@ public class BasicStream
         other._writeSlice = _writeSlice;
         _writeSlice = tmpWriteSlice;
 
-        SeqData tmpSeqDataStack = other._seqDataStack;
-        other._seqDataStack = _seqDataStack;
-        _seqDataStack = tmpSeqDataStack;
+        int tmpStartSeq = other._startSeq;
+        other._startSeq = _startSeq;
+        _startSeq = tmpStartSeq;
+
+        int tmpMinSeqSize = other._minSeqSize;
+        other._minSeqSize = _minSeqSize;
+        _minSeqSize = tmpMinSeqSize;
 
         java.util.ArrayList<Ice.Object> tmpObjectList = other._objectList;
         other._objectList = _objectList;
@@ -150,7 +170,7 @@ public class BasicStream
         //
         if(!_unlimited && sz > _messageSizeMax)
         {
-            throw new Ice.MemoryLimitException();
+            Ex.throwMemoryLimitException(sz, _messageSizeMax);
         }
 
         _buf.resize(sz, reading);
@@ -169,157 +189,6 @@ public class BasicStream
     getBuffer()
     {
         return _buf;
-    }
-
-    //
-    // startSeq() and endSeq() sanity-check sequence sizes during
-    // unmarshaling and prevent malicious messages with incorrect
-    // sequence sizes from causing the receiver to use up all
-    // available memory by allocating sequences with an impossibly
-    // large number of elements.
-    //
-    // The code generator inserts calls to startSeq() and endSeq()
-    // around the code to unmarshal a sequence. startSeq() is called
-    // immediately after reading the sequence size, and endSeq() is
-    // called after reading the final element of a sequence.
-    //
-    // For sequences that contain constructed types that, in turn,
-    // contain sequences, the code generator also inserts a call to
-    // endElement() after unmarshaling each element.
-    //
-    // startSeq() is passed the unmarshaled element count, plus the
-    // minimum size (in bytes) occupied by the sequence's element
-    // type. numElements * minSize is the smallest possible number of
-    // bytes that the sequence will occupy on the wire.
-    //
-    // Every time startSeq() is called, it pushes the element count
-    // and the minimum size on a stack. Every time endSeq() is called,
-    // it pops the stack.
-    //
-    // For an ordinary sequence (one that does not (recursively)
-    // contain nested sequences), numElements * minSize must be less
-    // than the number of bytes remaining in the stream.
-    //
-    // For a sequence that is nested within some other sequence, there
-    // must be enough bytes remaining in the stream for this sequence
-    // (numElements + minSize), plus the sum of the bytes required by
-    // the remaining elements of all the enclosing sequences.
-    //
-    // For the enclosing sequences, numElements - 1 is the number of
-    // elements for which unmarshaling has not started yet. (The call
-    // to endElement() in the generated code decrements that number
-    // whenever a sequence element is unmarshaled.)
-    //
-    // For sequence that variable-length elements, checkSeq() is
-    // called whenever an element is unmarshaled. checkSeq() also
-    // checks whether the stream has a sufficient number of bytes
-    // remaining.  This means that, for messages with bogus sequence
-    // sizes, unmarshaling is aborted at the earliest possible point.
-    //
-
-    public void
-    startSeq(int numElements, int minSize)
-    {
-        if(numElements == 0) // Optimization to avoid pushing a useless stack frame.
-        {
-            return;
-        }
-
-        //
-        // Push the current sequence details on the stack.
-        //
-        SeqData sd = new SeqData(numElements, minSize);
-        sd.previous = _seqDataStack;
-        _seqDataStack = sd;
-
-        int bytesLeft = _buf.b.remaining();
-        if(_seqDataStack.previous == null) // Outermost sequence
-        {
-            //
-            // The sequence must fit within the message.
-            //
-            if(numElements * minSize > bytesLeft) 
-            {
-                throw new Ice.UnmarshalOutOfBoundsException();
-            }
-        }
-        else // Nested sequence
-        {
-            checkSeq(bytesLeft);
-        }
-    }
-
-    //
-    // Check, given the number of elements requested for this
-    // sequence, that this sequence, plus the sum of the sizes of the
-    // remaining number of elements of all enclosing sequences, would
-    // still fit within the message.
-    //
-    public void
-    checkSeq()
-    {
-        checkSeq(_buf.b.remaining());
-    }
-
-    public void
-    checkSeq(int bytesLeft)
-    {
-        int size = 0;
-        SeqData sd = _seqDataStack;
-        do
-        {
-            size += (sd.numElements - 1) * sd.minSize;
-            sd = sd.previous;
-        }
-        while(sd != null);
-
-        if(size > bytesLeft)
-        {
-            throw new Ice.UnmarshalOutOfBoundsException();
-        }
-    }
-
-    public void
-    checkFixedSeq(int numElements, int elemSize)
-    {
-        int bytesLeft = _buf.b.remaining();
-        if(_seqDataStack == null) // Outermost sequence
-        {
-            //
-            // The sequence must fit within the message.
-            //
-            if(numElements * elemSize > bytesLeft) 
-            {
-                throw new Ice.UnmarshalOutOfBoundsException();
-            }
-        }
-        else // Nested sequence
-        {
-            checkSeq(bytesLeft - numElements * elemSize);
-        }
-    }
-
-    public void
-    endSeq(int sz)
-    {
-        if(sz == 0) // Pop only if something was pushed previously.
-        {
-            return;
-        }
-
-        //
-        // Pop the sequence stack.
-        //
-        SeqData oldSeqData = _seqDataStack;
-        assert(oldSeqData != null);
-        _seqDataStack = oldSeqData.previous;
-    }
-
-    public void
-    endElement()
-    {
-        assert(_seqDataStack != null);
-        --_seqDataStack.numElements;
     }
 
     final private static byte[] _encapsBlob =
@@ -405,12 +274,12 @@ public class BasicStream
         // readSize()/writeSize(), it could be 1 or 5 bytes.
         //
         int sz = readInt();
-        if(sz < 0)
+        if(sz < 6)
         {
-            throw new Ice.NegativeSizeException();
+            throw new Ice.UnmarshalOutOfBoundsException();
         }
 
-        if(sz - 4 > _buf.b.limit())
+        if(sz - 4 > _buf.b.remaining())
         {
             throw new Ice.UnmarshalOutOfBoundsException();
         }
@@ -427,8 +296,8 @@ public class BasicStream
             e.minor = Protocol.encodingMinor;
             throw e;
         }
-        _readEncapsStack.encodingMajor = eMajor;
-        _readEncapsStack.encodingMinor = eMinor;
+        // _readEncapsStack.encodingMajor = eMajor; // Currently unused
+        // _readEncapsStack.encodingMinor = eMinor; // Currently unused
     }
 
     public void
@@ -469,9 +338,9 @@ public class BasicStream
     skipEmptyEncaps()
     {
         int sz = readInt();
-        if(sz < 0)
+        if(sz < 6)
         {
-            throw new Ice.NegativeSizeException();
+            throw new Ice.UnmarshalOutOfBoundsException();
         }
 
         if(sz != 6)
@@ -511,9 +380,9 @@ public class BasicStream
     skipEncaps()
     {
         int sz = readInt();
-        if(sz < 0)
+        if(sz < 6)
         {
-            throw new Ice.NegativeSizeException();
+            throw new Ice.UnmarshalOutOfBoundsException();
         }
         try
         {
@@ -541,9 +410,9 @@ public class BasicStream
     public void startReadSlice()
     {
         int sz = readInt();
-        if(sz < 0)
+        if(sz < 4)
         {
-            throw new Ice.NegativeSizeException();
+            throw new Ice.UnmarshalOutOfBoundsException();
         }
         _readSlice = _buf.b.position();
     }
@@ -555,9 +424,9 @@ public class BasicStream
     public void skipSlice()
     {
         int sz = readInt();
-        if(sz < 0)
+        if(sz < 4)
         {
-            throw new Ice.NegativeSizeException();
+            throw new Ice.UnmarshalOutOfBoundsException();
         }
         try
         {
@@ -567,6 +436,56 @@ public class BasicStream
         {
             throw new Ice.UnmarshalOutOfBoundsException();
         }
+    }
+
+    public int
+    readAndCheckSeqSize(int minSize)
+    {
+        int sz = readSize();
+        
+        if(sz == 0)
+        {
+            return 0;
+        }
+        
+        //
+        // The _startSeq variable points to the start of the sequence for which
+        // we expect to read at least _minSeqSize bytes from the stream.
+        //
+        // If not initialized or if we already read more data than _minSeqSize, 
+        // we reset _startSeq and _minSeqSize for this sequence (possibly a 
+        // top-level sequence or enclosed sequence it doesn't really matter).
+        //
+        // Otherwise, we are reading an enclosed sequence and we have to bump
+        // _minSeqSize by the minimum size that this sequence will  require on
+        // the stream.
+        //
+        // The goal of this check is to ensure that when we start un-marshalling
+        // a new sequence, we check the minimal size of this new sequence against
+        // the estimated remaining buffer size. This estimatation is based on 
+        // the minimum size of the enclosing sequences, it's _minSeqSize.
+        //
+        if(_startSeq == -1 || _buf.b.position() > (_startSeq + _minSeqSize))
+        {
+            _startSeq = _buf.b.position();
+            _minSeqSize = sz * minSize;
+        }
+        else
+        {
+            _minSeqSize += sz * minSize;
+        }
+        
+        //
+        // If there isn't enough data to read on the stream for the sequence (and
+        // possibly enclosed sequences), something is wrong with the marshalled 
+        // data: it's claiming having more data that what is possible to read.
+        //
+        if(_startSeq + _minSeqSize > _buf.size())
+        {
+            throw new Ice.UnmarshalOutOfBoundsException();
+        }
+        
+        return sz;
     }
 
     public void
@@ -596,7 +515,7 @@ public class BasicStream
                 int v = _buf.b.getInt();
                 if(v < 0)
                 {
-                    throw new Ice.NegativeSizeException();
+                    throw new Ice.UnmarshalOutOfBoundsException();
                 }
                 return v;
             }
@@ -630,7 +549,7 @@ public class BasicStream
         }
         else
         {
-            index = new Integer(++_writeEncapsStack.typeIdIndex);
+            index = Integer.valueOf(++_writeEncapsStack.typeIdIndex);
             _writeEncapsStack.typeIdMap.put(id, index);
             writeBool(false);
             writeString(id);
@@ -653,7 +572,7 @@ public class BasicStream
         final boolean isIndex = readBool();
         if(isIndex)
         {
-            index = new Integer(readSize());
+            index = Integer.valueOf(readSize());
             id = _readEncapsStack.typeIdMap.get(index);
             if(id == null)
             {
@@ -663,7 +582,7 @@ public class BasicStream
         else
         {
             id = readString();
-            index = new Integer(++_readEncapsStack.typeIdIndex);
+            index = Integer.valueOf(++_readEncapsStack.typeIdIndex);
             _readEncapsStack.typeIdMap.put(index, id);
         }
         return id;
@@ -672,6 +591,10 @@ public class BasicStream
     public void
     writeBlob(byte[] v)
     {
+        if(v == null)
+        {
+            return;
+        }
         expand(v.length);
         _buf.b.put(v);
     }
@@ -679,6 +602,10 @@ public class BasicStream
     public void
     writeBlob(byte[] v, int off, int len)
     {
+        if(v == null)
+        {
+            return;
+        }
         expand(len);
         _buf.b.put(v, off, len);
     }
@@ -686,6 +613,10 @@ public class BasicStream
     public byte[]
     readBlob(int sz)
     {
+        if(_buf.b.remaining() < sz)
+        {
+            throw new Ice.UnmarshalOutOfBoundsException();
+        }
         byte[] v = new byte[sz];
         try
         {
@@ -781,8 +712,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 1);
+            final int sz = readAndCheckSeqSize(1);
             byte[] v = new byte[sz];
             _buf.b.get(v);
             return v;
@@ -796,21 +726,22 @@ public class BasicStream
     public java.io.Serializable
     readSerializable()
     {
-        int sz = readSize();
+        int sz = readAndCheckSeqSize(1);
         if (sz == 0)
         {
             return null;
         }
-        checkFixedSeq(sz, 1);
         try
         {
             InputStreamWrapper w = new InputStreamWrapper(sz, this);
-            java.io.ObjectInputStream in = new java.io.ObjectInputStream(w);
+            ObjectInputStream in = new ObjectInputStream(_instance, w);
             return (java.io.Serializable)in.readObject();
         }
         catch(java.lang.Exception ex)
         {
-            throw new Ice.MarshalException("cannot deserialize object: " + ex);
+            Ice.MarshalException e = new Ice.MarshalException("cannot deserialize object");
+            e.initCause(ex);
+            throw e;
         }
     }
 
@@ -832,9 +763,9 @@ public class BasicStream
         {
             writeSize(v.length);
             expand(v.length);
-            for(int i = 0; i < v.length; i++)
+            for(boolean b : v)
             {
-                _buf.b.put(v[i] ? (byte)1 : (byte)0);
+                _buf.b.put(b ? (byte)1 : (byte)0);
             }
         }
     }
@@ -857,8 +788,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 1);
+            final int sz = readAndCheckSeqSize(1);
             boolean[] v = new boolean[sz];
             for(int i = 0; i < sz; i++)
             {
@@ -935,8 +865,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 2);
+            final int sz = readAndCheckSeqSize(2);
             short[] v = new short[sz];
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             shortBuf.get(v);
@@ -1012,8 +941,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 4);
+            final int sz = readAndCheckSeqSize(4);
             int[] v = new int[sz];
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             intBuf.get(v);
@@ -1068,8 +996,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 8);
+            final int sz = readAndCheckSeqSize(8);
             long[] v = new long[sz];
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             longBuf.get(v);
@@ -1124,8 +1051,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 4);
+            final int sz = readAndCheckSeqSize(4);
             float[] v = new float[sz];
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             floatBuf.get(v);
@@ -1180,8 +1106,7 @@ public class BasicStream
     {
         try
         {
-            final int sz = readSize();
-            checkFixedSeq(sz, 8);
+            final int sz = readAndCheckSeqSize(8);
             double[] v = new double[sz];
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             doubleBuf.get(v);
@@ -1272,9 +1197,9 @@ public class BasicStream
         else
         {
             writeSize(v.length);
-            for(int i = 0; i < v.length; i++)
+            for(String e : v)
             {
-                writeString(v[i]);
+                writeString(e);
             }
         }
     }
@@ -1290,6 +1215,15 @@ public class BasicStream
         }
         else
         {
+
+            //
+            // Check the buffer has enough bytes to read.
+            //
+            if(_buf.b.remaining() < len)
+            {
+                throw new Ice.UnmarshalOutOfBoundsException();
+            }
+
             try
             {
                 //
@@ -1352,16 +1286,12 @@ public class BasicStream
     public String[]
     readStringSeq()
     {
-        final int sz = readSize();
-        startSeq(sz, 1);
+        final int sz = readAndCheckSeqSize(1);
         String[] v = new String[sz];
         for(int i = 0; i < sz; i++)
         {
             v[i] = readString();
-            checkSeq();
-            endElement();
         }
-        endSeq(sz);
         return v;
     }
 
@@ -1418,7 +1348,7 @@ public class BasicStream
                     // create a new index, and insert it into the
                     // to-be-marshaled map.
                     //
-                    q = new Integer(++_writeEncapsStack.writeIndex);
+                    q = Integer.valueOf(++_writeEncapsStack.writeIndex);
                     _writeEncapsStack.toBeMarshaledMap.put(v, q);
                 }
                 p = q;
@@ -1468,7 +1398,7 @@ public class BasicStream
 
             if(index < 0)
             {
-                Integer i = new Integer(-index);
+                Integer i = Integer.valueOf(-index);
                 java.util.LinkedList<Patcher> patchlist = _readEncapsStack.patchMap.get(i);
                 if(patchlist == null)
                 {
@@ -1495,7 +1425,7 @@ public class BasicStream
         }
 
         String mostDerivedId = readTypeId();
-        String id = new String(mostDerivedId);
+        String id = mostDerivedId;
 
         while(true)
         {
@@ -1573,7 +1503,7 @@ public class BasicStream
                 }
             }
 
-            Integer i = new Integer(index);
+            Integer i = Integer.valueOf(index);
             _readEncapsStack.unmarshaledMap.put(i, v);
 
             //
@@ -1697,8 +1627,7 @@ public class BasicStream
                 java.util.IdentityHashMap<Ice.Object, Integer> savedMap =
                     new java.util.IdentityHashMap<Ice.Object, Integer>(_writeEncapsStack.toBeMarshaledMap);
                 writeSize(savedMap.size());
-                java.util.Iterator<java.util.Map.Entry<Ice.Object, Integer> > p = savedMap.entrySet().iterator();
-                while(p.hasNext())
+                for(java.util.Map.Entry<Ice.Object, Integer> p : savedMap.entrySet())
                 {
                     //
                     // Add an instance from the old to-be-marshaled
@@ -1707,9 +1636,8 @@ public class BasicStream
                     // instances that are triggered by the classes
                     // marshaled are added to toBeMarshaledMap.
                     //
-                    java.util.Map.Entry<Ice.Object, Integer> e = p.next();
-                    _writeEncapsStack.marshaledMap.put(e.getKey(), e.getValue());
-                    writeInstance(e.getKey(), e.getValue());
+                    _writeEncapsStack.marshaledMap.put(p.getKey(), p.getValue());
+                    writeInstance(p.getKey(), p.getValue());
                 }
             
                 //
@@ -1717,10 +1645,9 @@ public class BasicStream
                 // substract what we have marshaled from the
                 // toBeMarshaledMap.
                 //
-                java.util.Iterator<Ice.Object> q = savedMap.keySet().iterator();
-                while(q.hasNext())
+                for(Ice.Object p : savedMap.keySet())
                 {
-                    _writeEncapsStack.toBeMarshaledMap.remove(q.next());
+                    _writeEncapsStack.toBeMarshaledMap.remove(p);
                 }
             }
         }
@@ -1758,24 +1685,16 @@ public class BasicStream
         //
         if(_objectList != null)
         {
-            java.util.Iterator<Ice.Object> e = _objectList.iterator();
-            while(e.hasNext())
+            for(Ice.Object obj : _objectList)
             {
-                Ice.Object obj = e.next();
                 try
                 {
                     obj.ice_postUnmarshal();
                 }
                 catch(java.lang.Exception ex)
                 {
-                    java.io.StringWriter sw = new java.io.StringWriter();
-                    java.io.PrintWriter pw = new java.io.PrintWriter(sw);
-                    IceUtilInternal.OutputBase out = new IceUtilInternal.OutputBase(pw);
-                    out.setUseTab(false);
-                    out.print("exception raised by ice_postUnmarshal:\n");
-                    ex.printStackTrace(pw);
-                    pw.flush();
-                    _instance.initializationData().logger.warning(sw.toString());
+                    String s = "exception raised by ice_postUnmarshal:\n" + Ex.toString(ex);
+                    _instance.initializationData().logger.warning("exception raised by ice_postUnmarshal:\n");
                 }
             }
         }
@@ -1797,14 +1716,8 @@ public class BasicStream
         }
         catch(java.lang.Exception ex)
         {
-            java.io.StringWriter sw = new java.io.StringWriter();
-            java.io.PrintWriter pw = new java.io.PrintWriter(sw);
-            IceUtilInternal.OutputBase out = new IceUtilInternal.OutputBase(pw);
-            out.setUseTab(false);
-            out.print("exception raised by ice_preMarshal:\n");
-            ex.printStackTrace(pw);
-            pw.flush();
-            _instance.initializationData().logger.warning(sw.toString());
+            String s = "exception raised by ice_preUnmarshal:\n" + Ex.toString(ex);
+            _instance.initializationData().logger.warning("exception raised by ice_preUnmarshal:\n");
         }
         v.__write(this);
     }
@@ -1857,9 +1770,8 @@ public class BasicStream
         //
         // Patch all references that refer to the instance.
         //
-        for(java.util.Iterator<Patcher> i = patchlist.iterator(); i.hasNext(); )
+        for(Patcher p : patchlist)
         {
-            Patcher p = i.next();
             try
             {
                 p.patch(v);
@@ -1986,6 +1898,7 @@ public class BasicStream
             // Otherwise, allocate an array to hold a copy of the uncompressed data.
             //
             data = new byte[size()];
+            pos(0);
             _buf.b.get(data);
         }
 
@@ -2003,7 +1916,7 @@ public class BasicStream
             //
             bos.write((int)'B');
             bos.write((int)'Z');
-            java.lang.Object[] args = new java.lang.Object[]{ bos, new Integer(compressionLevel) };
+            java.lang.Object[] args = new java.lang.Object[]{ bos, Integer.valueOf(compressionLevel) };
             java.io.OutputStream os = (java.io.OutputStream)_bzOutputStreamCtor.newInstance(args);
             os.write(data, offset + headerSize, uncompressedLen);
             os.close();
@@ -2081,6 +1994,7 @@ public class BasicStream
             // Otherwise, allocate an array to hold a copy of the compressed data.
             //
             compressed = new byte[size()];
+            pos(0);
             _buf.b.get(compressed);
         }
 
@@ -2142,7 +2056,7 @@ public class BasicStream
     {
         if(!_unlimited && _buf.b != null && _buf.b.position() + n > _messageSizeMax)
         {
-            throw new Ice.MemoryLimitException();
+            Ex.throwMemoryLimitException(_buf.b.position() + n, _messageSizeMax);
         }
         _buf.expand(n);
     }
@@ -2349,9 +2263,10 @@ public class BasicStream
     getConcreteClass(String className)
         throws LinkageError
     {
-        try
+        Class<?> c = _instance.findClass(className);
+
+        if(c != null)
         {
-            Class<?> c = Class.forName(className);
             //
             // Ensure the class is instantiable. The constants are
             // defined in the JVM specification (0x200 = interface,
@@ -2362,10 +2277,6 @@ public class BasicStream
             {
                 return c;
             }
-        }
-        catch(ClassNotFoundException ex)
-        {
-            // Ignore
         }
 
         return null;
@@ -2442,8 +2353,8 @@ public class BasicStream
         int start;
         int sz;
 
-        byte encodingMajor;
-        byte encodingMinor;
+        // byte encodingMajor; // Currently unused
+        // byte encodingMinor; // Currently unused
 
         java.util.TreeMap<Integer, java.util.LinkedList<Patcher> > patchMap;
         java.util.TreeMap<Integer, Ice.Object> unmarshaledMap;
@@ -2505,19 +2416,8 @@ public class BasicStream
     private int _messageSizeMax;
     private boolean _unlimited;
 
-    private static final class SeqData
-    {
-        public SeqData(int numElements, int minSize)
-        {
-            this.numElements = numElements;
-            this.minSize = minSize;
-        }
-
-        public int numElements;
-        public int minSize;
-        public SeqData previous;
-    }
-    SeqData _seqDataStack;
+    private int _startSeq;
+    private int _minSeqSize;
 
     private java.util.ArrayList<Ice.Object> _objectList;
 
@@ -2525,32 +2425,44 @@ public class BasicStream
         new java.util.HashMap<String, UserExceptionFactory>();
     private static java.lang.Object _factoryMutex = new java.lang.Object(); // Protects _exceptionFactories.
 
-    public static boolean
-    compressible()
-    {
-        return _bzInputStreamCtor != null && _bzOutputStreamCtor != null;
-    }
-
+    private static boolean _checkedBZip2 = false;
     private static java.lang.reflect.Constructor<?> _bzInputStreamCtor;
     private static java.lang.reflect.Constructor<?> _bzOutputStreamCtor;
-    static
+
+    public synchronized static boolean
+    compressible()
     {
-        try
+        //
+        // Use lazy initialization when determining whether support for bzip2 compression
+        // is available.
+        //
+        if(!_checkedBZip2)
         {
-            Class<?> cls;
-            Class<?>[] types = new Class<?>[1];
-            cls = Class.forName("org.apache.tools.bzip2.CBZip2InputStream");
-            types[0] = java.io.InputStream.class;
-            _bzInputStreamCtor = cls.getDeclaredConstructor(types);
-            cls = Class.forName("org.apache.tools.bzip2.CBZip2OutputStream");
-            types = new Class[2];
-            types[0] = java.io.OutputStream.class;
-            types[1] = Integer.TYPE;
-            _bzOutputStreamCtor = cls.getDeclaredConstructor(types);
+            _checkedBZip2 = true;
+            try
+            {
+                Class<?> cls;
+                Class<?>[] types = new Class<?>[1];
+                cls = IceInternal.Util.findClass("org.apache.tools.bzip2.CBZip2InputStream", null);
+                if(cls != null)
+                {
+                    types[0] = java.io.InputStream.class;
+                    _bzInputStreamCtor = cls.getDeclaredConstructor(types);
+                }
+                cls = IceInternal.Util.findClass("org.apache.tools.bzip2.CBZip2OutputStream", null);
+                if(cls != null)
+                {
+                    types = new Class[2];
+                    types[0] = java.io.OutputStream.class;
+                    types[1] = Integer.TYPE;
+                    _bzOutputStreamCtor = cls.getDeclaredConstructor(types);
+                }
+            }
+            catch(Exception ex)
+            {
+                // Ignore - bzip2 compression not available.
+            }
         }
-        catch(Exception ex)
-        {
-            // Ignore - bzip2 compression not available.
-        }
+        return _bzInputStreamCtor != null && _bzOutputStreamCtor != null;
     }
 }
